--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Halaman Saya</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Halaman Saya</title>
 </head>
 <body>
-<header>
-<h1>Judul Halaman</h1>
+  <header>
+  <h1>Ini Punya fael</h1>
 </header>
-<nav>
-<!-- Daftar tautan -->
-</nav>
-<main>
-<section>
-<article>
-<h2>Sub‐judul</h2>
-<p>Paragraf pembuka.</p>
-</article>
-</section>
-<aside>
-<!-- Info samping -->
-</aside>
-</main>
-<footer>
-© 2025 SMA × AhliWeb.com
-</footer>
-</body>
 </html>
+<!-- Daftar tautan -->
+<article>
+  <h2>HI</h2>
+  <p>Selamat datang di halaman fael.</p>
+  <img src="https://assets.kompasiana.com/items/album/2023/05/15/9a24d48eafa6ba090c13cb91bcda5323-6462152e08a8b53812152342.jpg?t=o&v=770.jpeg" alt="Foto meme" width="300" />
+</article>
