--- a/indeks.html
+++ b/indeks.html
@@ -7,42 +7,12 @@
 </head>
 <body>
   <header>
-    <h1>Judul Halaman</h1>
-    <p>Selamat datang di halaman pribadi saya.</p>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="#beranda">Beranda</a></li>
-      <li><a href="#tentang">Tentang Saya</a></li>
-      <li><a href="#kontak">Kontak</a></li>
-    </ul>
-  </nav>
-
-  <main>
-    <section id="beranda">
-      <article>
-        <h2>Sub‐judul</h2>
-        <p>Paragraf pembuka yang menjelaskan isi utama dari halaman ini. Kamu bisa membaca lebih lanjut tentang saya, melihat proyek yang saya buat, atau menghubungi saya.</p>
-      </article>
-    </section>
-
-    <section id="tentang">
-      <article>
-        <h2>Tentang Saya</h2>
-        <p>Saya adalah pelajar SMA yang sedang belajar pengembangan web. Saat ini saya sedang mempelajari HTML, CSS, dan JavaScript untuk membuat situs web interaktif.</p>
-      </article>
-    </section>
-
-    <aside>
-      <h3>Info Samping</h3>
-      <p>Ini adalah catatan tambahan atau info menarik lainnya, seperti kutipan favorit atau tautan ke artikel penting.</p>
-    </aside>
-  </main>
-
-  <footer>
-    <p>© 2025 SMA × AhliWeb.com</p>
-    <p>Dibuat dengan HTML dasar.</p>
-  </footer>
-</body>
+  <h1>Ini Punya fael</h1>
+</header>
 </html>
+<!-- Daftar tautan -->
+<article>
+  <h2>HI</h2>
+  <p>Selamat datang di halaman fael.</p>
+  <img src="https://assets.kompasiana.com/items/album/2023/05/15/9a24d48eafa6ba090c13cb91bcda5323-6462152e08a8b53812152342.jpg?t=o&v=770.jpeg" alt="Foto meme" width="300" />
+</article>
