--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
 </html>
 <!-- Daftar tautan -->
 <article>
-  <h2>HI</h2>
-  <p>Selamat datang di halaman fael.</p>
-  <img src="https://assets.kompasiana.com/items/album/2023/05/15/9a24d48eafa6ba090c13cb91bcda5323-6462152e08a8b53812152342.jpg?t=o&v=770.jpeg" alt="Foto meme" width="300" />
-</article>
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Toko Komputer</title>
-  <!-- Font Awesome CDN untuk ikon -->
+  <title>Toko Online</title>
+
+  <!-- Font Awesome CDN for icons -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -30,46 +27,211 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+
   <style>
-    /* Reset & base */
+    /* Reset */
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f4f7f8;
+      background-color: #fafafa;
       color: #333;
-      line-height: 1.6;
+      line-height: 1.5;
     }
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
+
     /* Header */
     header {
-      background-color: #1e88e5;
+      background-color: #007bff;
       color: white;
       padding: 20px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
     }
+
     header h1 {
       font-weight: 700;
       font-size: 1.8rem;
-      letter-spacing: 1px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
+
     nav a {
+      color: white;
+      text-decoration: none;
       margin-left: 25px;
       font-weight: 600;
       transition: color 0.3s ease;
     }
+
     nav a:hover {
-      color: #ffca28;
+      color: #ffdd57;
     }
 
-    /* Hero Banner */
+    /* Hero Section */
     .hero {
-      background: url('https://images.unsplash.com/photo-151733671
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80') center/cover no-repeat;
+      height: 350px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 2.5rem;
+      font-weight: 700;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+    }
+
+    /* Products Section */
+    .products {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+      display: flex;
+      gap: 30px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .product-card {
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgb(0 0 0 / 0.1);
+      width: 280px;
+      padding: 20px;
+      text-align: center;
+      transition: transform 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .product-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 8px 20px rgb(0 0 0 / 0.15);
+    }
+
+    .product-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+
+    .product-card h3 {
+      margin-bottom: 10px;
+      color: #007bff;
+    }
+
+    .price {
+      font-weight: 700;
+      color: #e63946;
+      margin-bottom: 15px;
+      font-size: 1.2rem;
+    }
+
+    .btn-buy {
+      background-color: #007bff;
+      border: none;
+      padding: 12px 25px;
+      border-radius: 6px;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      transition: background-color 0.3s ease;
+      width: 100%;
+    }
+
+    .btn-buy:hover {
+      background-color: #0056b3;
+    }
+
+    /* Footer */
+    footer {
+      background-color: #212529;
+      color: #adb5bd;
+      text-align: center;
+      padding: 20px 10px;
+      margin-top: 50px;
+      font-size: 0.9rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 900px) {
+      .products {
+        flex-direction: column;
+        align-items: center;
+      }
+      header {
+        justify-content: center;
+      }
+      nav {
+        margin-top: 10px;
+        width: 100%;
+        text-align: center;
+      }
+      nav a {
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>
+      <i class="fa-solid fa-store"></i> Toko Jualan
+    </h1>
+    <nav>
+      <a href="#produk">Produk</a>
+      <a href="#kontak">Kontak</a>
+      <a href="#about">Tentang Kami</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    Produk Berkualitas, Harga Terbaik
+  </section>
+
+  <section id="produk" class="products">
+    <article class="product-card">
+      <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?auto=format&fit=crop&w=600&q=80" alt="Produk 1" />
+      <h3>leptop</h3>
+      <p class="price">Rp12.000.000</p>
+      <button class="btn-buy"><i class="fa-solid fa-cart-shopping"></i> Beli Sekarang</button>
+    </article>
+
+    <article class="product-card">
+      <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=600&q=80" alt="Produk 2" />
+      <h3>manusia</h3>
+      <p class="price">Rp850</p>
+      <button class="btn-buy"><i class="fa-solid fa-cart-shopping"></i> Beli Sekarang</button>
+    </article>
+
+    <article class="product-card">
+      <img src="https://images.unsplash.com/photo-1503602642458-232111445657?auto=format&fit=crop&w=600&q=80" alt="Produk 3" />
+      <h3>kursi</h3>
+      <p class="price">Rp2.500</p>
+      <button class="btn-buy"><i class="fa-solid fa-cart-shopping"></i> Beli Sekarang</button>
+    </article>
+  </section>
+
+  <footer id="kontak">
+    <p>
+      Hubungi kami: <i class="fa-solid fa-envelope"></i> email@tokojualan.com | <i class="fa-solid fa-phone"></i> 0812-3456-7890
+    </p>
+    <p id="about">© 2025 Toko Jualan. Semua hak cipta dilindungi.</p>
+  </footer>
+</body>
+</html>
+ 
